Fix: Correct element IDs in index.html to match main.js

--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
 
             <!-- Toggle Buttons -->
             <div class="toggle-container">
-                <button type="button" class="toggle-btn active" id="loginToggle">Login</button>
-                <button type="button" class="toggle-btn" id="registerToggle">Register</button>
+                <button type="button" class="toggle-btn active" id="loginTab">Login</button>
+                <button type="button" class="toggle-btn" id="registerTab">Register</button>
             </div>
 
             <!-- Login Form -->
@@ -63,8 +63,8 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="registerConfirmPassword">Confirm Password</label>
-                    <input type="password" id="registerConfirmPassword" name="confirmPassword" required placeholder="Re-enter password">
+                    <label for="confirmPassword">Confirm Password</label>
+                    <input type="password" id="confirmPassword" name="confirmPassword" required placeholder="Re-enter password">
                 </div>
 
                 <button type="submit" class="btn-primary">
