--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Twenty20 Portfolio - Login</title>
+    <meta name="description" content="Twenty20 Portfolio - Secure Login & Registration System">
+    <meta name="author" content="Mohammed Ayaan">
+    <title>Twenty20 Portfolio - Login & Register</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
@@ -26,12 +28,12 @@
 
                 <div class="form-group">
                     <label for="loginEmail">Email Address</label>
-                    <input type="email" id="loginEmail" name="email" required placeholder="your.email@example.com">
+                    <input type="email" id="loginEmail" name="email" required placeholder="your.email@example.com" autocomplete="email">
                 </div>
 
                 <div class="form-group">
                     <label for="loginPassword">Password</label>
-                    <input type="password" id="loginPassword" name="password" required placeholder="Enter your password">
+                    <input type="password" id="loginPassword" name="password" required placeholder="Enter your password" autocomplete="current-password">
                 </div>
 
                 <button type="submit" class="btn-primary">
@@ -48,23 +50,23 @@
 
                 <div class="form-group">
                     <label for="registerName">Full Name</label>
-                    <input type="text" id="registerName" name="name" required placeholder="John Doe">
+                    <input type="text" id="registerName" name="name" required placeholder="Mohammed Ayaan" autocomplete="name">
                 </div>
 
                 <div class="form-group">
                     <label for="registerEmail">Email Address</label>
-                    <input type="email" id="registerEmail" name="email" required placeholder="your.email@example.com">
+                    <input type="email" id="registerEmail" name="email" required placeholder="your.email@example.com" autocomplete="email">
                 </div>
 
                 <div class="form-group">
                     <label for="registerPassword">Password</label>
-                    <input type="password" id="registerPassword" name="password" required minlength="6" placeholder="Minimum 6 characters">
+                    <input type="password" id="registerPassword" name="password" required minlength="6" placeholder="Minimum 6 characters" autocomplete="new-password">
                     <small class="hint">Use at least 6 characters</small>
                 </div>
 
                 <div class="form-group">
                     <label for="confirmPassword">Confirm Password</label>
-                    <input type="password" id="confirmPassword" name="confirmPassword" required placeholder="Re-enter password">
+                    <input type="password" id="confirmPassword" name="confirmPassword" required placeholder="Re-enter password" autocomplete="new-password">
                 </div>
 
                 <button type="submit" class="btn-primary">
